Change link in header.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header itemscope="" itemtype="http://schema.org/Organization" class="Header">
-      <div class="Header-wrapper"><a href="/" class="Header-logo"><img src="images/ruy_logo.svg"></a>
+      <div class="Header-wrapper"><a href="/ruy" class="Header-logo"><img src="images/ruy_logo.svg"></a>
         <nav class="Navbar">
           <div class="Navbar-doc"><a href="https://github.com/Moove-it/ruy" target="_blank">docs</a>
           </div>
