--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header itemscope="" itemtype="http://schema.org/Organization" class="Header">
       <div class="Header-wrapper"><a href="/" class="Header-logo"><img src="images/ruy_logo.svg"></a>
         <nav class="Navbar">
-          <div class="Navbar-doc"><a href="https://github.com/Moove-it/ruy" target="_blank">docs</a>
+          <div class="Navbar-doc"><a href="http://www.rubydoc.info/github/moove-it/ruy" target="_blank">docs</a>
           </div>
           <ul class="Navbar-list">
                 <li class="Navbar-listItem why-index"><a href="#why">why</a>
                 </li>
                 <li class="Navbar-listItem using-index"><a href="#using">using</a>
                 </li>
-                <li class="Navbar-listItem docs-index Navbar-listItem--doc"><a href="https://github.com/Moove-it/ruy" target="_blank">docs</a>
+                <li class="Navbar-listItem docs-index Navbar-listItem--doc"><a href="http://www.rubydoc.info/github/moove-it/ruy" target="_blank">docs</a>
                 </li>
           </ul>
         </nav>
@@ -35,7 +35,7 @@
         </div><a href="#why" class="SectionBrand-scroll"><i class="fa fa-chevron-down"></i></a>
       </div>
     </section>
-    <div class="fork-top"><a href="https://github.com/Moove-it/ruy" target="_blank"><img src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a></div>
+    <div class="fork-top"><a href="https://github.com/moove-it/ruy" target="_blank"><img src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a></div>
     <section id="why" class="SectionWay">
       <div class="container-cell">
         <div class="row">
@@ -115,7 +115,7 @@ gifter.call(day_of_week: :monday, amount: 124)
     </section>
     <footer class="Footer">
       <div class="Footer-row">
-        <div class="Footer-content"><a href="https://github.com/Moove-it/ruy" target="_blank"><img src="images/ruy_logo.svg" class="ruy"></a><span class="maintained">is maintained by</span><a href="http://www.moove-it.com" target="_blank"><img src="images/mooveit_logo.svg" class="moove-it"></a>
+        <div class="Footer-content"><a href="https://github.com/moove-it/ruy" target="_blank"><img src="images/ruy_logo.svg" class="ruy"></a><span class="maintained">is maintained by</span><a href="http://www.moove-it.com" target="_blank"><img src="images/mooveit_logo.svg" class="moove-it"></a>
         </div>
       </div>
     </footer>
